# deep-rl-hands-on

./: .gitignore  .pre-commit-config.yaml  02_gym.ipynb  03_pytorch.ipynb  04_cross_entropy.ipynb  05_value_iteration.ipynb  06_dqn.ipynb  07_ptan.ipynb  08_dqn_extensions.ipynb  09_speedups.ipynb  10_rl_trading.ipynb  11_policy_gradients.ipynb  12_a2c.ipynb  13_a3c.ipynb  LICENSE  Makefile  README.md  pyproject.toml
chapter02/: 01_agent_anatomy.py
